# myMathLibrary

./: .gitignore  CMakeLists.txt  Config.cmake.in  build.sh  mathlib.cpp  mathlib.h
Testing/: CMakeLists.txt  test_myMathAngle.cpp  test_myMathBasicFunctions.cpp  test_myMathDCM.cpp  test_myMathMatrix1x1.cpp  test_myMathMatrixFunctions.cpp  test_myMathMatrixNonSquare.cpp  test_myMathMatrixSquare.cpp  test_myMathQuaternion.cpp  test_myMathVector.cpp
src/: Angle.h  BasicFunctions.h  CMakeLists.txt  Complex.h  Constants.h  DCM.h  Matrix.h  MatrixFunctions.h  Quaternion.h  Rotation.h  Vector.h  mathlib.h  myMath.h  myMathAngle.h  myMathBasicFunctions.h  myMathConstants.h  myMathDCM.h  myMathDistribution.h  myMathMatrix.h  myMathMatrixFunctions.h  myMathQuaternion.h  myMathRotation.h  myMathStat.h  myMathVector.h
tests/: CMakeLists.txt  test_myMathVector.cpp
